  - make all methods into =items
  - document parameters
  - more examples
  - add AUTHOR/REVISION/SEE ALSO
- add samples/tk-photo.pl
- fixes to verbose mode in Makefile.PL, also added a -v switch so you 
  can enable it via the command-line
  Resolves: http://rt.cpan.org/NoAuth/Bug.html?id=16094
- arc(..., fill=> ...) wasn't handling concave areas correctly
- arc(..., color=>...) wasn't properly filling it's area
- added experimental antialiased support to arc()
- the order of the returned values for Imager::Font's align() method
  was incorrect.
- check the correct directory when adding the cygwin Win32 API include
  path (Makefile.PL).  This was a later response to #16094
  Resolves: http://rt.cpan.org/NoAuth/Bug.html?id=16094
- add --nolog command-line switch to Makefile.PL to disable logging
- filled polygons using a complex fill with combine != 0 (none) didn't
  correctly handle polygons that crossed a given scanline more than once.
- the straight edges of filled arcs weren't being drawn correctly, 
  causing minor artifacts at the inner and external corners
- implemented valign=>'end' for Imager::Font->align
- added $img->align_string() as a way to call Imager::Font->align
- added samples/align-string.pl
- improved missing argument handling a little for the string() method
- linkify Imager.pm a bit more
- expand Imager::Draw:
  - make all methods items
  - document parameters
  - more examples
  - add AUTHOR, REVISION.
- add smoke test for nearest_color filter
- added integer overflow checks to many memory allocation calls
- added experimental EXIF decoding when reading JPEG files.
- read/write i_xres, i_yres, i_aspect only tage with JPEG files,
  and read/write jpeg_density_unit (+_name) tag
- save the jpeg_comment tag when writing

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
